--- a/index.html
+++ b/index.html
@@ -4,8 +4,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TokenScan | AI-Powered Crypto Due Diligence</title>
-    <meta name="description" content="Paste a contract address. Get a due diligence report in 30 seconds. Analyzing tokenomics, holder distribution, and contract risks.">
+
+    <!-- Primary Meta Tags -->
+    <title>TokenScan | AI-Powered Crypto Due Diligence - Free Token Analysis</title>
+    <meta name="title" content="TokenScan | AI-Powered Crypto Due Diligence - Free Token Analysis">
+    <meta name="description" content="Instant institutional-grade token analysis. Paste any contract address and get comprehensive reports on tokenomics, holder distribution, and contract risks in 30 seconds. 100% free, no login required.">
+    <meta name="keywords" content="token analysis, crypto due diligence, smart contract audit, rug pull detection, tokenomics analysis, holder distribution, liquidity analysis, crypto security, blockchain analysis, token scanner">
+    <meta name="author" content="Schroeder Technologies & Gregorious Creative Studios">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://tokenscan.tech">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tokenscan.tech">
+    <meta property="og:title" content="TokenScan | AI-Powered Crypto Due Diligence">
+    <meta property="og:description" content="Instant institutional-grade token analysis. Get comprehensive reports on tokenomics, contract risks, and holder distribution in 30 seconds. 100% free.">
+    <meta property="og:image" content="https://tokenscan.tech/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="TokenScan">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://tokenscan.tech">
+    <meta name="twitter:title" content="TokenScan | AI-Powered Crypto Due Diligence">
+    <meta name="twitter:description" content="Instant institutional-grade token analysis. Get comprehensive reports in 30 seconds. 100% free, no login required.">
+    <meta name="twitter:image" content="https://tokenscan.tech/og-image.png">
+
+    <!-- Additional SEO -->
+    <meta name="theme-color" content="#0a0a12">
+    <meta name="application-name" content="TokenScan">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="TokenScan">
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "TokenScan",
+      "description": "AI-powered token due diligence and analysis platform",
+      "url": "https://tokenscan.tech",
+      "applicationCategory": "FinanceApplication",
+      "operatingSystem": "Any",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "creator": {
+        "@type": "Organization",
+        "name": "Schroeder Technologies & Gregorious Creative Studios"
+      }
+    }
+    </script>
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -91,6 +144,30 @@
             color: #fff;
             font-weight: 900;
         }
+
+        /* Screen reader only utility */
+        .sr-only {
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            padding: 0;
+            margin: -1px;
+            overflow: hidden;
+            clip: rect(0, 0, 0, 0);
+            white-space: nowrap;
+            border-width: 0;
+        }
+
+        /* Mobile optimizations for 320px-430px */
+        @media (max-width: 430px) {
+            body { font-size: 16px; }
+            .tap-target { min-width: 48px; min-height: 48px; }
+        }
+
+        /* Custom scrollbar for archive list */
+        .custom-scrollbar::-webkit-scrollbar { width: 6px; }
+        .custom-scrollbar::-webkit-scrollbar-track { background: transparent; }
+        .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(255, 255, 255, 0.2); border-radius: 3px; }
     </style>
 <script type="importmap">
 {
